added messaging service email support and booking feature